# notepad-raylib

./: .gitignore  CMakeLists.txt  README.md  \
.cache/clangd/index/: main.c.813898897C8BF486.idx
src/: board.c  board.h  main.c  toolbox.c  toolbox.h
